<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:debuggable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/main_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        tools:context="bba.androidosf3.MainActivity" >

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/info3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title_label"
            android:text="@string/subtitle_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bbbbbb" />

        <TextView
            android:id="@+id/subtitle2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/subtitle_label"
            android:text="@string/subtitle2_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bbbbbb" />

        <TextView
            android:id="@+id/subtitle3_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/subtitle2_label"
            android:text="@string/subtitle3_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bbbbbb" />

        <TextView
            android:id="@+id/option1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/subtitle3_label"
            android:layout_marginTop="12dp"
            android:text="@string/option1_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#eeeeee" />

        <CheckBox
            android:id="@+id/option1_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/option1_label"
            android:text="@string/option1_checkbox_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#bbbbbb" />

        <TextView
            android:id="@+id/option2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/option1_checkbox"
            android:layout_marginTop="12dp"
            android:text="@string/option2_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#eeeeee" />

        <CheckBox
            android:id="@+id/option2_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/option2_label"
            android:text="@string/option2_checkbox_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#bbbbbb" />
        
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/option2_checkbox"
            android:layout_marginTop="24dp"
            android:text="@string/save_button_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>