<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:debuggable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/main_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        tools:context="bba.androidosf3.MainActivity" >

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/info3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/title_label"
            android:text="@string/subtitle_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#bbbbbb" />

        <TextView
            android:id="@+id/semester_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/subtitle_label"
            android:layout_marginTop="16dp"
            android:text="@string/info4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#dddddd" />

        <Spinner
            android:id="@+id/semester_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/semester_label"
            android:background="@color/bg_color" />

        <TextView
            android:id="@+id/week_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/semester_spinner"
            android:text="@string/info1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#dddddd" />

        <Spinner
            android:id="@+id/week_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/week_label"
            android:background="@color/bg_color" />

        <TextView
            android:id="@+id/dow_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/week_spinner"
            android:text="@string/info2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#dddddd" />

        <Spinner
            android:id="@+id/dow_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dow_label"
            android:layout_marginBottom="16dp"
            android:background="@color/bg_color" />
    </RelativeLayout>

</ScrollView>